--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+  position: relative;
+}
+
+.cardGame {
+  height: auto;
+  width: 33%;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
