--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,19 @@ body {
   width: 33%;
 }
 
+@media only screen and (min-width: 768px) {
+  .cardGame {
+    width: 25%;
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 960px) {
+  .cardGame {
+    width: 20%;
+    height: auto;
+  }
+}
 
 /* ==========================================================================
    Helper classes
