--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,8 @@ body {
 .cardGame {
   height: auto;
   width: 33%;
+  padding: 0.5em;
+  background-clip: content-box;
 }
 
 @media only screen and (min-width: 768px) {
