--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,9 @@ textarea {
    ========================================================================== */
 
 body {
+  min-height: 100vh;
   position: relative;
-
+  background: linear-gradient(to right bottom, #000000, #eed816);
 }
 
 .cardGame {
@@ -97,23 +98,40 @@ body {
   max-width: 1000px;
 }
 
-/* @media only screen and (min-width: 768px) {
-  .cardGame {
-    width: 25%;
-    height: auto;
-  }
+#spaceTime {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+}
+
+/* .flipped {
+  transform: rotateY(180deg);
+  transition-duration: 1s; 
 } */
 
+@media only screen and (min-width: 768px) {
+  .space {
+    width: 50%;
+  }
+  /* .cardGame {
+    width: 25%;
+    height: auto;
+  } */
+}
+
 @media only screen and (min-width: 1024px) {
-  .cardGame {
+  /* .cardGame {
     width: 20%;
     height: auto;
-  }
+  } */
 }
 
 @media only screen and (min-width: 1440px) {
+  .space {
+    display: none;
+  }
   .cardGame {
-    width: 14.28%;
+    width: 14.28vw;
     height: auto;
   }
 }
